--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Horários de Autocarros" />
+    <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -138,6 +140,14 @@
             font-style: italic;
             padding: 20px;
         }
+        #map {
+            width: 100%;
+            height: 350px;
+            border-radius: 15px;
+            margin-top: 20px;
+            margin-bottom: 10px;
+            box-shadow: 0 8px 16px rgba(0,0,0,0.10);
+        }
         @media (max-width: 480px) {
             .container { margin: 10px; border-radius: 15px; }
             .banner { padding: 15px; height: 120px; }
@@ -145,6 +155,7 @@
             .tab-buttons { margin: 0 10px 20px 10px; gap: 5px; }
             .tab-buttons button { padding: 8px 0; font-size: 14px; }
             .tab-content { padding: 0 10px 20px 10px; }
+            #map { height: 250px; }
         }
     </style>
 </head>
@@ -158,6 +169,7 @@
             <button id="btnHorarios" class="active" onclick="showTab('horarios')">Horários</button>
             <button id="btnPdf" onclick="showTab('pdf')">PDF</button>
             <button id="btnLembretes" onclick="showTab('lembretes')">Lembretes</button>
+            <button id="btnMapa" onclick="showTab('mapa')">Mapa</button>
         </div>
         <div class="tab-content">
             <div id="horarios" class="active">
@@ -182,8 +194,20 @@
                 <h3 style="margin-bottom: 15px;">Lembretes Ativos</h3>
                 <div id="reminderSummary"></div>
             </div>
+            <div id="mapa" style="display:none;">
+                <div id="map"></div>
+                <div style="text-align:center; margin-top:10px; color:#333;">
+                    <span style="display:inline-block; width:12px; height:12px; background:#1976d2; border-radius:50%; margin-right:6px; vertical-align:middle;"></span>
+                    <span style="margin-right:20px;">IDA (azul)</span>
+                    <span style="display:inline-block; width:12px; height:12px; background:#d32f2f; border-radius:50%; margin-right:6px; vertical-align:middle;"></span>
+                    <span>VINDA (vermelho)</span>
+                </div>
+            </div>
         </div>
     </div>
+
+    <!-- Leaflet JS -->
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script>
         // Permissão para notificações
         if ('Notification' in window && Notification.permission !== 'granted') {
@@ -225,6 +249,52 @@
                 sunday: []
             }
         };
+
+        // --- Paragens para o mapa ---
+        const paragens = [
+            {
+                id: "ida-colina",
+                nome: "IDA - COLINA",
+                tipo: "ida",
+                lat: 40.64501464239894,
+                lng: -7.933283238651065
+            },
+            {
+                id: "vinda-comv",
+                nome: "VINDA - COMV",
+                tipo: "vinda",
+                lat: 40.66177477430442,
+                lng: -7.915567858770837
+            },
+            {
+                id: "vinda-ss1",
+                nome: "VINDA - SS1",
+                tipo: "vinda",
+                lat: 40.65906004500033,
+                lng: -7.914853086145352
+            },
+            {
+                id: "vinda-rossio",
+                nome: "VINDA - ROSSIO",
+                tipo: "vinda",
+                lat: 40.65637472609051,
+                lng: -7.91418000752452
+            },
+            {
+                id: "vinda-liceu",
+                nome: "VINDA - LICEU",
+                tipo: "vinda",
+                lat: 40.6537335297357,
+                lng: -7.916012116848912
+            },
+            {
+                id: "vinda-paulo-vi",
+                nome: "VINDA - PAULO VI",
+                tipo: "vinda",
+                lat: 40.65037159541066,
+                lng: -7.918722984472655
+            }
+        ];
 
         // --- Funções utilitárias ---
         function updateCurrentTime() {
@@ -271,6 +341,58 @@
             localStorage.setItem('reminders', JSON.stringify(reminders));
         }
 
+        // --- ICS ---
+        function isIOS() {
+            return /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
+        }
+        function downloadICS(route, dateObj, time) {
+            function pad(n) { return n < 10 ? '0' + n : n; }
+            const yyyy = dateObj.getFullYear();
+            const mm = pad(dateObj.getMonth() + 1);
+            const dd = pad(dateObj.getDate());
+            const HH = pad(parseInt(time.split(':')[0], 10));
+            const MM = pad(parseInt(time.split(':')[1], 10));
+            const dtStart = `${yyyy}${mm}${dd}T${HH}${MM}00`;
+
+            // Evento com duração de 30 minutos
+            const dtEndObj = new Date(dateObj);
+            dtEndObj.setHours(parseInt(time.split(':')[0], 10));
+            dtEndObj.setMinutes(parseInt(time.split(':')[1], 10) + 30);
+            const HHend = pad(dtEndObj.getHours());
+            const MMend = pad(dtEndObj.getMinutes());
+            const dtEnd = `${yyyy}${mm}${dd}T${HHend}${MMend}00`;
+
+            const icsContent = [
+                "BEGIN:VCALENDAR",
+                "VERSION:2.0",
+                "PRODID:-//App da Kika//PT",
+                "BEGIN:VEVENT",
+                `UID:${route}-${dtStart}@appdakika`,
+                `DTSTAMP:${dtStart}Z`,
+                `DTSTART:${dtStart}Z`,
+                `DTEND:${dtEnd}Z`,
+                `SUMMARY:Lembrete Autocarro - ${route}`,
+                "DESCRIPTION:Hora de apanhar o autocarro!",
+                "END:VEVENT",
+                "END:VCALENDAR"
+            ].join("\r\n");
+
+            if (isIOS()) {
+                // Safari/iOS: abre numa nova aba para guardar manualmente
+                const icsData = 'data:text/calendar;charset=utf-8,' + encodeURIComponent(icsContent);
+                window.open(icsData, '_blank');
+            } else {
+                // Outros browsers: download automático
+                const blob = new Blob([icsContent], { type: "text/calendar" });
+                const link = document.createElement("a");
+                link.href = URL.createObjectURL(blob);
+                link.download = `lembrete-${route}-${yyyy}${mm}${dd}-${time}.ics`;
+                document.body.appendChild(link);
+                link.click();
+                document.body.removeChild(link);
+            }
+        }
+
         function scheduleReminder(time, baseDateObj) {
             const route = document.getElementById("routeSelect").value;
             if (!route || !time || !baseDateObj) return alert("Rota, hora ou data inválida.");
@@ -299,7 +421,7 @@
             updateReminderSummary();
             alert(`Lembrete criado para ${time} (${route}) em ${dateObj.toLocaleDateString()}`);
 
-            // Cria e descarrega ficheiro ICS
+            // Emite ficheiro ICS automaticamente
             downloadICS(route, dateObj, time);
 
             // Chama lembrete nativo Android se disponível
@@ -469,12 +591,57 @@
                 });
             }, 60000);
             setInterval(cleanupExpiredReminders, 60 * 1000);
+
+            // --- Mapa Leaflet ---
+            let mapInstance;
+            function initMap() {
+                if (mapInstance) return; // Só inicializa uma vez
+                mapInstance = L.map('map').setView([40.655, -7.92], 13);
+
+                L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                    maxZoom: 19,
+                    attribution: '© OpenStreetMap'
+                }).addTo(mapInstance);
+
+                // Ícones personalizados
+                const iconAzul = new L.Icon({
+                    iconUrl: "https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-blue.png",
+                    shadowUrl: "https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-shadow.png",
+                    iconSize: [25, 41],
+                    iconAnchor: [12, 41],
+                    popupAnchor: [1, -34],
+                    shadowSize: [41, 41]
+                });
+                const iconVermelho = new L.Icon({
+                    iconUrl: "https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-red.png",
+                    shadowUrl: "https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-shadow.png",
+                    iconSize: [25, 41],
+                    iconAnchor: [12, 41],
+                    popupAnchor: [1, -34],
+                    shadowSize: [41, 41]
+                });
+
+                paragens.forEach(p => {
+                    const marcador = L.marker([p.lat, p.lng], {icon: p.tipo === "ida" ? iconAzul : iconVermelho})
+                        .addTo(mapInstance)
+                        .bindPopup(`<b>${p.nome}</b>`);
+                    marcador.on('click', function() {
+                        // Seleciona a rota no dropdown, abre tab de horários, mostra horários dessa rota
+                        document.getElementById('routeSelect').value = p.id;
+                        showTab('horarios');
+                        renderSchedule(p.id);
+                    });
+                });
+            }
+
+            // Inicializa mapa apenas ao abrir tab
+            window.initMap = initMap;
         });
 
         // Tabs
         function showTab(tabName) {
-            const tabs = ['horarios', 'pdf', 'lembretes'];
-            const buttons = ['btnHorarios', 'btnPdf', 'btnLembretes'];
+            const tabs = ['horarios', 'pdf', 'lembretes', 'mapa'];
+            const buttons = ['btnHorarios', 'btnPdf', 'btnLembretes', 'btnMapa'];
             tabs.forEach((tabId, index) => {
                 const tab = document.getElementById(tabId);
                 const btn = document.getElementById(buttons[index]);
@@ -488,61 +655,10 @@
                 cleanupExpiredReminders();
                 updateReminderSummary();
             }
+            if (tabName === 'mapa') {
+                setTimeout(window.initMap, 300); // inicializa o mapa ao abrir a tab
+            }
         }
-
-        // --- ICS ---
-        function isIOS() {
-    return /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
-}
-
-function downloadICS(route, dateObj, time) {
-    // Gera datas para ICS
-    function pad(n) { return n < 10 ? '0' + n : n; }
-    const yyyy = dateObj.getFullYear();
-    const mm = pad(dateObj.getMonth() + 1);
-    const dd = pad(dateObj.getDate());
-    const HH = pad(parseInt(time.split(':')[0], 10));
-    const MM = pad(parseInt(time.split(':')[1], 10));
-    const dtStart = `${yyyy}${mm}${dd}T${HH}${MM}00Z`;
-
-    // Evento com duração de 30 minutos
-    const dtEndObj = new Date(dateObj);
-    dtEndObj.setHours(parseInt(time.split(':')[0], 10));
-    dtEndObj.setMinutes(parseInt(time.split(':')[1], 10) + 30);
-    const HHend = pad(dtEndObj.getHours());
-    const MMend = pad(dtEndObj.getMinutes());
-    const dtEnd = `${yyyy}${mm}${dd}T${HHend}${MMend}00Z`;
-
-    const icsContent = [
-        "BEGIN:VCALENDAR",
-        "VERSION:2.0",
-        "PRODID:-//App da Kika//PT",
-        "BEGIN:VEVENT",
-        `UID:${route}-${dtStart}@appdakika`,
-        `DTSTAMP:${dtStart}`,
-        `DTSTART:${dtStart}`,
-        `DTEND:${dtEnd}`,
-        `SUMMARY:Lembrete Autocarro - ${route}`,
-        "DESCRIPTION:Hora de apanhar o autocarro!",
-        "END:VEVENT",
-        "END:VCALENDAR"
-    ].join("\r\n");
-
-    if (isIOS()) {
-        // Safari no iOS: abre numa nova aba para o utilizador poder guardar manualmente
-        const icsData = 'data:text/calendar;charset=utf-8,' + encodeURIComponent(icsContent);
-        window.open(icsData, '_blank');
-    } else {
-        // Outros browsers: download automático
-        const blob = new Blob([icsContent], { type: "text/calendar" });
-        const link = document.createElement("a");
-        link.href = URL.createObjectURL(blob);
-        link.download = `lembrete-${route}-${yyyy}${mm}${dd}-${time}.ics`;
-        document.body.appendChild(link);
-        link.click();
-        document.body.removeChild(link);
-    }
-}
     </script>
 </body>
 </html>
