--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Horários de Autocarros" />
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#000000"> <!-- Cor da barra superior no Android -->
+    <meta name="application-name" content="Horários de Autocarros">
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <style>
