--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@
                 "PRODID:-//App da Kika//PT",
                 "BEGIN:VEVENT",
                 `UID:${route}-${dtStart}@appdakika`,
-                `DTSTAMP:${dtStart}Z`,
-                `DTSTART:${dtStart}Z`,
+                `DTSTAMP:${dtStart}`,
+                `DTSTART:${dtStart}`,
                 `DTEND:${dtEnd}Z`,
                 `SUMMARY:Lembrete Autocarro - ${route}`,
                 "DESCRIPTION:Hora de apanhar o autocarro!",
