--- a/index.html
+++ b/index.html
@@ -236,17 +236,17 @@
                 sunday: ['08:24', '15:04']
             },
             'vinda-comv': {
-                weekday: ['07:00', '07:55', '09:00', '09:55', '12:30', '13:25', '14:25', '15:55', '17:30', '18:30'],
+                weekday: ['07:00', '07:55', '09:00', '12:30', '13:25', '14:25', '15:55', '17:30', '18:30'],
                 weekend: ['12:00'],
                 sunday: []
             },
             'vinda-ss1': {
-                weekday: ['07:02', '07:57', '09:02', '09:57', '12:32', '13:27', '14:27', '15:57', '17:32', '18:32', '19:15', '20:10'],
+                weekday: ['07:02', '07:57', '09:02', '09:55', '12:32', '13:27', '14:27', '15:57', '17:32', '18:32', '19:15', '20:10'],
                 weekend: ['12:02', '13:05', '20:05'],
                 sunday: ['13:50', '19:15']
             },
             'vinda-rossio': {
-                weekday: ['07:05', '08:00', '09:05', '09:58', '12:35', '13:30', '14:30', '16:00', '17:35', '18:35', '19:16', '20:12'],
+                weekday: ['07:05', '08:00', '09:05', '09:57', '12:35', '13:30', '14:30', '16:00', '17:35', '18:35', '19:16', '20:12'],
                 weekend: ['12:05', '13:07', '20:07'],
                 sunday: ['13:52', '19:17']
             },
@@ -256,7 +256,7 @@
                 sunday: []
             },
             'vinda-paulo-vi': {
-                weekday: ['07:07', '08:02', '09:07', '12:37', '13:32', '14:32', '16:02', '17:37', '18:37', '19:19'],
+                weekday: ['07:07', '08:02', '09:07', '09:58', '12:37', '13:32', '14:32', '16:02', '17:37', '18:37', '19:19'],
                 weekend: ['12:07'],
                 sunday: []
             }
