--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         OneSignal.push(function() {
             OneSignal.init({
                 // Substitua 'SEU_APP_ID' pelo seu OneSignal App ID
-                appId: "SEU_APP_ID",
+                appId: "09cf47e1-545a-4a0b-9873-f09cc9a71707",
                 safari_web_id: "SEU_SAFARI_WEB_ID",
                 serviceWorkerUpdaterPath: 'OneSignalSDKUpdateWorker.js',
                 serviceWorkerPath: 'OneSignalSDKWorker.js',
