--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@ END:VCALENDAR`;
             if (window.appData && window.appData.paragens) {
                 window.appData.paragens.forEach(paragem => {
                     const iconColor = paragem.tipo === 'IDA' ? 'blue' : 'green';
-const iconHtml = `<div style="color: white; background-color: ${iconColor}; width: 30px; height: 30px; text-align: center; line-height: 30px; border-radius: 50%; border: 2px solid white; box-shadow: 0 2px 5px rgba(0,0,0,0.3);"><i class="<i class="fa-light fa-location-dot"></i>"></i></div>`;
+const iconHtml = `<div style="color: white; background-color: ${iconColor}; width: 30px; height: 30px; text-align: center; line-height: 30px; border-radius: 50%; border: 2px solid white; box-shadow: 0 2px 5px rgba(0,0,0,0.3);"><i class="<i class="fa-light fa-location-dot"></i>"></div>`;
 
 const icon = L.divIcon({
     className: 'custom-div-icon',
@@ -918,4 +918,5 @@ L.marker([paragem.lat, paragem.lng], { icon: icon })
         });
     </script>
 </body>
+
 </html>
