--- a/Index.html
+++ b/Index.html
@@ -2498,48 +2498,59 @@ async function addReminder(itemData) {
         return;
     }
 
-    try {
-        const userId = await OneSignal.getUserId();
-        if (userId) {
-            const reminderPayload = {
-                playerId: userId,
-                name: name,
-                time: time,
-                date: date,
-                minutesBefore: 10
-            };
+    // Usar a estrutura OneSignal.push para garantir que o SDK está pronto
+    OneSignal.push(async function() {
+        let userId = null;
+        try {
+            // Await a função OneSignal.getUserId() que retorna uma Promise
+            userId = await OneSignal.getUserId();
+        } catch (error) {
+            console.error('Erro ao obter OneSignal User ID:', error);
+            // Continua a execução mesmo que haja um erro ao obter o userId
+        }
+        
+        try {
+            if (userId) {
+                const reminderPayload = {
+                    playerId: userId,
+                    name: name,
+                    time: time,
+                    date: date,
+                    minutesBefore: 10
+                };
 
-            const response = await fetch('https://schedulenotification-lpmrppc7cq-uc.a.run.app', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(reminderPayload)
-            });
-            const data = await response.json();
+                const response = await fetch('https://schedulenotification-lpmrppc7cq-uc.a.run.app', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(reminderPayload)
+                });
+                const data = await response.json();
 
-            if (data.success) {
-                reminders.push({ ...itemData, type: 'onesignal', name: name });
-                localStorage.setItem('busReminders', JSON.stringify(reminders));
-                showModal('Lembrete agendado com sucesso!');
-                renderReminders();
+                if (data.success) {
+                    reminders.push({ ...itemData, type: 'onesignal', name: name });
+                    localStorage.setItem('busReminders', JSON.stringify(reminders));
+                    showModal('Lembrete agendado com sucesso!');
+                    renderReminders();
+                } else {
+                    throw new Error(data.message || 'Erro de servidor desconhecido');
+                }
             } else {
-                throw new Error(data.message || 'Erro de servidor desconhecido');
+                reminders.push({ ...itemData, type: 'manual', name: name });
+                localStorage.setItem('busReminders', JSON.stringify(reminders));
+                showModal('Lembrete adicionado localmente. Ative as notificações para lembretes automáticos.');
+                renderReminders();
+                // Tenta mostrar o prompt de subscrição se o userId não for encontrado
+                OneSignal.showNativePrompt();
             }
-        } else {
+        } catch (error) {
+            console.error('Erro ao agendar lembrete:', error);
             reminders.push({ ...itemData, type: 'manual', name: name });
             localStorage.setItem('busReminders', JSON.stringify(reminders));
-            showModal('Lembrete adicionado localmente. Ative as notificações para lembretes automáticos.');
+            showModal('Erro de comunicação com o servidor. Lembrete adicionado localmente.');
             renderReminders();
-            OneSignal.showNativePrompt();
         }
-    } catch (error) {
-        console.error('Erro ao agendar lembrete:', error);
-        reminders.push({ ...itemData, type: 'manual', name: name });
-        localStorage.setItem('busReminders', JSON.stringify(reminders));
-        showModal('Erro de comunicação com o servidor. Lembrete adicionado localmente.');
-        renderReminders();
-    }
+    });
 }
-
 
 function removeReminder(index) {
     reminders.splice(index, 1);
