--- a/Index.html
+++ b/Index.html
@@ -1837,15 +1837,20 @@ window.OneSignal = window.OneSignal || [];
     <script>
         // Configuração do OneSignal (mantida)
         window.OneSignal = window.OneSignal || [];
-        OneSignal.push(function() {
-            OneSignal.init({
-                appId: "09cf47e1-545a-4a0b-9873-f09cc9a71707",
-                safari_web_id: "SEU_SAFARI_WEB_ID",
-                serviceWorkerUpdaterPath: 'OneSignalSDKUpdateWorker.js',
-                serviceWorkerPath: 'OneSignalSDKWorker.js',
-            });
-            console.log('OneSignal SDK inicializado.');
+OneSignal.push(function() {
+    OneSignal.init({
+        app_id: "09cf47e1-545a-4a0b-9873-f09cc9a71707",
+        serviceWorkerUpdaterPath: 'OneSignalSDK.js'
+    });
+    
+    // Adicione o Event Listener para os botões aqui.
+    document.querySelectorAll('.btn-agendar-lembrete').forEach(button => {
+        button.addEventListener('click', async (event) => {
+            const itemData = JSON.parse(event.target.dataset.itemData);
+            await addReminder(itemData);
         });
+    });
+});
 
 // =======================================================================
 // === Funções JavaScript Atualizadas e Corrigidas (v26)
@@ -3235,7 +3240,7 @@ function renderTaskDetailsModalContent(task, isEditing) {
         <div class="task-actions centered" style="margin-top: 20px;">
             <button class="btn-primary" id="toggleEditButton" onclick="toggleEditMode('${task.id}')"><i class="fas fa-edit"></i> ${isEditing ? 'Guardar Alterações' : 'Alterar Tarefa'}</button>
             <button class="btn-task-complete" onclick="toggleTaskCompletion('${task.id}'); closeModal('taskDetailsModal');"><i class="fas fa-check"></i> ${task.isCompleted ? 'Marcar como incompleto' : 'Marcar como completo'}</button>
-            <button class="btn-task-reminder" onclick="addReminder({id: '${task.id}', name: '${task.name}', date: '${task.date}', time: '${task.time}'}); closeModal('taskDetailsModal');"><i class="fas fa-bell"></i> Lembrete</button>
+            <button class="btn-task-reminder" "><i class="fas fa-bell"></i> Lembrete</button>
             <button class="btn-task-calendar" onclick="generateICS({id: '${task.id}', name: '${task.name}', date: '${task.date}', time: '${task.time}', description: '${task.description}'}, true); closeModal('taskDetailsModal');"><i class="fas fa-calendar-plus"></i> ICS</button>
             <button class="btn-task-whatsapp" onclick="shareWhatsApp({id: '${task.id}', name: '${task.name}', date: '${task.date}', time: '${task.time}'}); closeModal('taskDetailsModal');"><i class="fab fa-whatsapp"></i> WhatsApp</button>
             ${task.isTravel && task.lat && task.lng ? `<button class="btn-task-navigate" onclick="navigateToTask('${task.id}'); closeModal('taskDetailsModal');"><i class="fas fa-route"></i> Rota</button>` : ''}
